// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vimeo Video Block should render Default 1`] = `
<DocumentFragment>
  .emotion-2 {
  width: 100%;
  aspect-ratio: 16/9;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      style="width: auto; height: auto;"
    />
  </div>
</DocumentFragment>
`;

exports[`Vimeo Video Block should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-2 {
  width: 100%;
  aspect-ratio: 16/9;
}

<div
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      style="width: auto; height: auto;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</DocumentFragment>
`;
